-ENH: use itktools code from an external project.
-ENH: Include itktools just like we use ITK, using find_package. The UseFile.cmake explains how it works. This makes it easier to have your own (possibly not open source) repository of ITKTools that are still in development.
-STY: replaced ITKTools by ITKTOOLS in the cmake code, because it wasn't consistent.
-STY: use the ADD_ITKTOOL macro for computedifferenceimageBIG (had to rename the source file for that
-ENH: the ADD_ITKTOOL now only defines the project name if the user hasn't done that already (could happen in external projects for example).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required( VERSION 2.6 )
 
 # This project is intended to be built outside the Insight source tree
-project( ITKTools )
+project( ITKTOOLS )
 
 #---------------------------------------------------------------------
 # Find ITK.
 FIND_PACKAGE( ITK 4 REQUIRED )
+include( ${ITK_USE_FILE} )
 
 # ITKTools depends on some ITK modules. Check for them:
 # NOTE: not sure if this is the best way to check for this,
@@ -42,15 +43,29 @@ if( MSVC )
 endif()
 
 #---------------------------------------------------------------------
+# Increases address capacity
+if ( WIN32 )
+  set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj" )
+endif()
+
+#---------------------------------------------------------------------
 # Output directories.
-set( LIBRARY_OUTPUT_PATH ${ITKTools_BINARY_DIR}/bin
+set( LIBRARY_OUTPUT_PATH ${ITKTOOLS_BINARY_DIR}/bin
   CACHE INTERNAL "Single output directory for building all libraries." )
-set( EXECUTABLE_OUTPUT_PATH ${ITKTools_BINARY_DIR}/bin
+set( EXECUTABLE_OUTPUT_PATH ${ITKTOOLS_BINARY_DIR}/bin
   CACHE INTERNAL "Single output directory for building all executables." )
 mark_as_advanced( LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH )
-set( ITKTools_LIBRARY_PATH    "${LIBRARY_OUTPUT_PATH}" )
-set( ITKTools_EXECUTABLE_PATH "${EXECUTABLE_OUTPUT_PATH}" )
-include_directories( ${ITKTools_SOURCE_DIR}/common )
+set( ITKTOOLS_LIBRARY_PATH    "${LIBRARY_OUTPUT_PATH}" )
+set( ITKTOOLS_EXECUTABLE_PATH "${EXECUTABLE_OUTPUT_PATH}" )
+
+#---------------------------------------------------------------------
+# Include directories
+set( ITKTOOLS_INCLUDE_DIRECTORIES "${ITKTOOLS_SOURCE_DIR}/common" )
+include_directories( ${ITKTOOLS_INCLUDE_DIRECTORIES} )
+
+#---------------------------------------------------------------------
+# Link libraries
+SET( ITKTOOLS_LIBRARIES ITKTools-Common)
 
 #---------------------------------------------------------------------
 # Compilation options
@@ -69,9 +84,9 @@ endif()
 #---------------------------------------------------------------------
 # Define where to install ITKTools
 if( WIN32 )
-  set( ITKTools_INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )
+  set( ITKTOOLS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX} )
 else()
-  set( ITKTools_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin )
+  set( ITKTOOLS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin )
 endif()
 
 #---------------------------------------------------------------------
@@ -80,7 +95,7 @@ set( ITKTOOLS_BUILD_TESTING OFF CACHE BOOL
   "Perform some tests on basic functionality of ITKTools." )
 if( ITKTOOLS_BUILD_TESTING )
  enable_testing()
- add_subdirectory( ${ITKTools_SOURCE_DIR}/../Testing ${ITKTools_BINARY_DIR}/Testing )
+ add_subdirectory( ${ITKTOOLS_SOURCE_DIR}/../Testing ${ITKTOOLS_BINARY_DIR}/Testing )
  include( CTest )
 endif()
 
@@ -89,38 +104,13 @@ endif()
 set( ITKTOOLS_BUILD_DOCUMENTATION OFF CACHE BOOL
   "Create the documentation of ITKTools." )
 if( ITKTOOLS_BUILD_DOCUMENTATION)
- add_subdirectory( ${ITKTools_SOURCE_DIR}/../Documentation ${ITKTools_BINARY_DIR}/Documentation )
+ add_subdirectory( ${ITKTOOLS_SOURCE_DIR}/../Documentation ${ITKTOOLS_BINARY_DIR}/Documentation )
 endif()
 
 #---------------------------------------------------------------------
-# Macro to simplify the addition of an ITKTool
-macro( ADD_ITKTOOL name )
-  # Define the project
-  project( name )
-
-  # Increases address capacity
-  if ( WIN32 )
-    set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
-    set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
-  endif()
-
-  # Include ITK headers.
-  include( ${ITK_USE_FILE} )
-
-  # Get the list of files in this directory
-  file( GLOB filelist RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} * )
-  list( REMOVE_ITEM filelist "CMakeLists.txt" )
-
-  # Create the executable
-  add_executable( px${name} ${filelist} )
-
-  # Link
-  target_link_libraries( px${name} ITKTools-Common ${ITK_LIBRARIES} )
-
-  # Install
-  install( TARGETS px${name}
-    RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
-endmacro()
+# Include macros
+SET( ITKTOOLS_MACRO_DEFINITIONS ${ITKTOOLS_SOURCE_DIR}/CMakeMacros.cmake)
+INCLUDE( ${ITKTOOLS_MACRO_DEFINITIONS} )
 
 #---------------------------------------------------------------------
 # Include all ITKTools
@@ -129,4 +119,26 @@ foreach( tool ${listOfTools} )
   get_filename_component( path_to_tool ${tool} PATH )
   add_subdirectory( ${path_to_tool} )
 endforeach()
+
+#----------------------------------------------------------------------
+# Make it easier to include itktools functionality in other programs.
+# See UseFile.cmake for instructions.
+
+# Save library dependencies.
+SET( ITKTOOLS_LIBRARY_DEPENDS_FILE ${ITKTOOLS_BINARY_DIR}/ITKTOOLSLibraries.cmake )
+EXPORT( TARGETS ${ITKTOOLS_LIBRARIES} FILE ${ITKTOOLS_LIBRARY_DEPENDS_FILE} )
+
+# The "use" file.
+SET( ITKTOOLS_USE_FILE ${ITKTOOLS_SOURCE_DIR}/UseFile.cmake )
+
+# Create the config file. It defines some variables, and by placing
+# this in the binary directory, the find_package command will recognise
+# the ITKTools package.
+CONFIGURE_FILE( ${ITKTOOLS_SOURCE_DIR}/ITKTOOLSConfig.cmake.in
+ ${ITKTOOLS_BINARY_DIR}/ITKTOOLSConfig.cmake @ONLY )
+
+# Store the current build directory in the CMake user package registry
+# for package <name>. The find_package command may consider the director
+# while searching for package <name>.
+export( PACKAGE ITKTOOLS )
 
