--- a/src/computedifferenceimageBIG/CMakeLists.txt
+++ b/src/computedifferenceimageBIG/CMakeLists.txt
@@ -1,20 +1,5 @@
 # This project is intended to be built outside the Insight source tree
 PROJECT( computeDifferenceImageBIG )
 
-# Increases address capacity
-IF ( WIN32 )
-  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj" )
-  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj" )
-ENDIF ( WIN32 )
-
-# Find ITK.
-FIND_PACKAGE( ITK REQUIRED )
-INCLUDE( ${ITK_USE_FILE} )
-
-ADD_EXECUTABLE( pxcomputedifferenceimageBIG computeDifferenceImage.cxx computeDifferenceImageVector.cxx computeDifferenceImageVector2D.cxx computeDifferenceImageVector3D.cxx computeDifferenceImageVector4D.cxx )
-
-TARGET_LINK_LIBRARIES( pxcomputedifferenceimageBIG ITKTools-Common ${ITK_LIBRARIES} )
-
-INSTALL( TARGETS pxcomputedifferenceimageBIG
-  RUNTIME DESTINATION ${ITKTools_INSTALL_DIR} )
+ADD_ITKTOOL( computeDifferenceImageBIG )
 
