--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -10,7 +10,7 @@ FOREACH( script ${allscripts} )
   STRING( COMPARE NOTEQUAL ${scriptname} ".svn" testvar3 )
   IF( ${testvar1} AND ${testvar2} AND ${testvar3} )
     INSTALL( PROGRAMS ${scriptname}
-      DESTINATION ${ITKTools_INSTALL_DIR} )
+      DESTINATION ${ITKTOOLS_INSTALL_DIR} )
   ENDIF()
 ENDFOREACH()
 
