ENH: implemented support for Mevis Dicom/Tiff image format (optionally, if you enable the cmake option)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,18 @@ if( NOT found EQUAL -1 )
 endif()
 
 #---------------------------------------------------------------------
+# Add Mevis Dicom/Tiff support 
+MARK_AS_ADVANCED( ITKTOOLS_USE_MEVISDICOMTIFF )
+OPTION( ITKTOOLS_USE_MEVISDICOMTIFF
+  "Support MevisLab DicomTiff image format" OFF )
+
+# Define a macro that makes sure mevis dicomtiff IO is loaded.
+IF( ITKTOOLS_USE_MEVISDICOMTIFF )
+  ADD_DEFINITIONS( -D_ITKTOOLS_USE_MEVISDICOMTIFF )
+ENDIF()
+
+
+#---------------------------------------------------------------------
 # Kill the anoying MS VS warning about non-safe functions.
 # They hide real warnings.
 if( MSVC )
