--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,6 +1,11 @@
 # This project is intended to be built outside the Insight source tree
 PROJECT( common )
 
+SET( mevisfiles
+  itkMevisDicomTiffImageIO.cxx
+  itkMevisDicomTiffImageIOFactory.cxx )
+
+
 ADD_LIBRARY( ITKTools-Common
   itkCommandLineArgumentParser.h
   itkCommandLineArgumentParser.cxx
@@ -10,7 +15,9 @@ ADD_LIBRARY( ITKTools-Common
   ITKToolsHelpers.cxx
   ITKToolsImageProperties.h
   ITKToolsImageProperties.cxx
-  ITKToolsBase.h )
+  ITKToolsBase.h
+  ${mevisfiles} )
+
 
 TARGET_LINK_LIBRARIES( ITKTools-Common ${ITK_LIBRARIES} )
 
