--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,10 +1,7 @@
 # This project is intended to be built outside the Insight source tree
 PROJECT( common )
 
-SET( mevisfiles
-  itkMevisDicomTiffImageIO.cxx
-  itkMevisDicomTiffImageIOFactory.cxx )
-
+ADD_SUBDIRECTORY( MevisDicomTiff )
 
 ADD_LIBRARY( ITKTools-Common
   itkCommandLineArgumentParser.h
@@ -16,8 +13,8 @@ ADD_LIBRARY( ITKTools-Common
   ITKToolsImageProperties.h
   ITKToolsImageProperties.cxx
   ITKToolsBase.h
-  ${mevisfiles} )
+)
 
 
-TARGET_LINK_LIBRARIES( ITKTools-Common ${ITK_LIBRARIES} )
+TARGET_LINK_LIBRARIES( ITKTools-Common ${ITK_LIBRARIES} mevisdcmtiff )
 
