COMP: Upgrade cmake_minimum_required according to ITK 5

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required( VERSION 2.6 )
+# Require at least ITK_OLDEST_VALIDATED_POLICIES_VERSION from
+# https://github.com/InsightSoftwareConsortium/ITK/blob/v5.0.0/CMakeLists.txt#L13 
+cmake_minimum_required( VERSION 3.10.2 )
 
 # This project is intended to be built outside the Insight source tree
 project( ITKTOOLS )
